Add register page first draft

--- a/frontend-webapp/src/app/home/home.component.html
+++ b/frontend-webapp/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 <div class="container mt-5">
   <h1 class="display-3">Whalemart</h1>
   <p class="lead">The biggest marketplace for market.</p>
-<<<<<<< HEAD
   <p>
       Lorem ipsum dolor sit amet, posse fabulas assentior vix ex. Ex erat sale mei, suas quot lobortis te sed, his ad decore atomorum quaerendum. Mea an errem nobis accusata, an malis oblique scripserit his, in suavitate iracundia duo. Ei quodsi voluptaria quo. Eu errem dissentias mei.
 
@@ -43,7 +42,6 @@
 
       Molestiae definiebas id sed, invidunt lobortis laboramus qui et. In sit ullum soluta, autem modus iudicabit at pri, sit iudico voluptua scribentur ut. Per nulla laudem ridens eu, tamquam minimum ponderum mea ea, ex ius velit delenit ullamcorper. Eu audire eleifend vel. Eu congue impetus singulis mel, ne has velit augue soluta, pri ad facete regione definiebas.
   </p>
-=======
   <a class="btn btn-primary" routerLink="./login" role="button">Login</a>
->>>>>>> Add login button to homepage
+  <a class="btn btn-primary" routerLink="./register" role="button">Register</a>
 </div>
