--- a/frontend-webapp/src/app/login/login.component.html
+++ b/frontend-webapp/src/app/login/login.component.html
@@ -4,6 +4,13 @@
       <h1 class="display-4 mt-5">เข้าสู่ระบบ</h1>
 
       <form (submit)="login()" [formGroup]="loginForm">
+        <button (click)="loginWithFacebook()">Login with Facebook</button>
+
+        <div *ngIf="isFb">
+          <p>User ID {{ fbUserId }}</p>
+          <p>Access Token {{ fbAccessToken }}</p>
+        </div>
+
         <app-input-group label="อีเมล">
           <input appInput type="email" class="form-control" placeholder="อีเมล" formControlName="email" required>
           <app-input-error *ngIf="loginForm.controls['email'].hasError('email')">
