--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -12,10 +12,18 @@
         <li class="nav-item active">
           <a class="nav-link" href="#">ลงตลาดให้เช่า</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">เข้าสู่ระบบ</a>
-        </li>
-        <button class="btn btn-outline-primary my-2 my-sm-0">สมัครสมาชิก</button>
+        <ng-container *ngIf="(userName | async) as name; else loggedIn">
+          <span class="navbar-text">{{ name }}</span>
+          <li class="nav-item">
+            <button class="btn btn-link my-2 my-sm-0" (click)="logout()">ออกจากระบบ</button>
+          </li>
+        </ng-container>
+        <ng-template #loggedIn>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="login">เข้าสู่ระบบ</a>
+          </li>
+          <a class="btn btn-outline-primary my-2 my-sm-0" routerLink="register">สมัครสมาชิก</a>
+        </ng-template>
       </ul>
     </div>
   </div>
