--- a/frontend-webapp/src/app/register/register.component.html
+++ b/frontend-webapp/src/app/register/register.component.html
@@ -1,47 +1,51 @@
-<div class="container">
-  <h1>Register</h1>
+<div class="container mb-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
+      <h1 class="display-4 mt-5">Register</h1>
 
-  <form [formGroup]="registerForm" (submit)="register()">
-    <div *ngIf="errorReason" [ngSwitch]="errorReason">
-        <ng-template ngSwitchCase="INVALID_EMAIL_PASSWORD">Invalid email or password.</ng-template>
-        <ng-template ngSwitchDefault>Unknown error: {{ errorReason }}</ng-template>
+      <form [formGroup]="registerForm" (submit)="register()">
+        <div *ngIf="errorReason" [ngSwitch]="errorReason">
+            <ng-template ngSwitchCase="INVALID_EMAIL_PASSWORD">Invalid email or password.</ng-template>
+            <ng-template ngSwitchDefault>Unknown error: {{ errorReason }}</ng-template>
+        </div>
+
+        <app-input-group label="Email Address">
+          <input appInput type="email" class="form-control" formControlName="email" placeholder="Email Address">
+          <app-input-error *ngIf="registerForm.controls['email'].hasError('email')">
+            Please enter your valid email.
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="First Name">
+          <input appInput type="text" class="form-control" formControlName="firstName" placeholder="First Name">
+          <app-input-error *ngIf="registerForm.controls['firstName'].hasError('required')">
+            Please enter your first name.
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="Last Name">
+          <input appInput type="text" class="form-control" formControlName="lastName" placeholder="Last Name">
+          <app-input-error *ngIf="registerForm.controls['lastName'].hasError('required')">
+            Please enter your last name.
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="Password">
+          <input appInput type="password" class="form-control" formControlName="password" placeholder="Password">
+          <app-input-error *ngIf="registerForm.controls['password'].hasError('required')">
+            Please enter password.
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="Phone No.">
+          <input appInput type="text" class="form-control" formControlName="phone" placeholder="Phone No.">
+          <app-input-error *ngIf="registerForm.controls['phone'].hasError('required')">
+            Please enter your phone number.
+          </app-input-error>
+        </app-input-group>
+
+        <button type="submit" class="btn btn-primary" [disabled]="isRegistering">Register</button>
+      </form>
     </div>
-
-    <app-input-group label="Email Address">
-      <input appInput type="email" class="form-control" formControlName="email" placeholder="Email Address">
-      <app-input-error *ngIf="registerForm.controls['email'].hasError('email')">
-        Please enter your valid email.
-      </app-input-error>
-    </app-input-group>
-
-    <app-input-group label="First Name">
-      <input appInput type="text" class="form-control" formControlName="firstName" placeholder="First Name">
-      <app-input-error *ngIf="registerForm.controls['firstName'].hasError('required')">
-        Please enter your first name.
-      </app-input-error>
-    </app-input-group>
-
-    <app-input-group label="Last Name">
-      <input appInput type="text" class="form-control" formControlName="lastName" placeholder="Last Name">
-      <app-input-error *ngIf="registerForm.controls['lastName'].hasError('required')">
-        Please enter your last name.
-      </app-input-error>
-    </app-input-group>
-
-    <app-input-group label="Password">
-      <input appInput type="password" class="form-control" formControlName="password" placeholder="Password">
-      <app-input-error *ngIf="registerForm.controls['password'].hasError('required')">
-        Please enter password.
-      </app-input-error>
-    </app-input-group>
-
-    <app-input-group label="Phone No.">
-      <input appInput type="text" class="form-control" formControlName="phone" placeholder="Phone No.">
-      <app-input-error *ngIf="registerForm.controls['phone'].hasError('required')">
-        Please enter your phone number.
-      </app-input-error>
-    </app-input-group>
-
-    <button type="submit" class="btn btn-primary" [disabled]="isRegistering">Register</button>
-  </form>
+  </div>
 </div>
