--- a/frontend-webapp/src/app/login/login.component.html
+++ b/frontend-webapp/src/app/login/login.component.html
@@ -1,29 +1,29 @@
 <div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
-      <h1 class="display-4 mt-5">Login</h1>
+      <h1 class="display-4 mt-5">เข้าสู่ระบบ</h1>
 
       <form (submit)="login()" [formGroup]="loginForm">
         <div *ngIf="errorReason" [ngSwitch]="errorReason">
-          <ng-template ngSwitchCase="INVALID_EMAIL_PASSWORD">Invalid email or password.</ng-template>
-          <ng-template ngSwitchDefault>Unknown error: {{ errorReason }}</ng-template>
+          <ng-template ngSwitchCase="INVALID_EMAIL_PASSWORD">อีเมลหรือรหัสผ่านไม่ถูกต้อง</ng-template>
+          <ng-template ngSwitchDefault>เกิดข้อผิดพลาดที่ไม่ทราบสาเหตุ: {{ errorReason }}</ng-template>
         </div>
 
-        <app-input-group label="Email">
-          <input appInput type="email" class="form-control" placeholder="Email" formControlName="email" required>
+        <app-input-group label="อีเมล">
+          <input appInput type="email" class="form-control" placeholder="อีเมล" formControlName="email" required>
           <app-input-error *ngIf="loginForm.controls['email'].hasError('email')">
-            Please enter your email.
+            กรุณาระบุอีเมล
           </app-input-error>
         </app-input-group>
 
-        <app-input-group label="Password">
-          <input appInput type="password" class="form-control" placeholder="Password" formControlName="password" required>
+        <app-input-group label="รหัสผ่าน">
+          <input appInput type="password" class="form-control" placeholder="รหัสผ่าน" formControlName="password" required>
           <app-input-error *ngIf="loginForm.controls['password'].hasError('required')">
-            Please enter your password.
+            กรุณาระบุรหัสผ่าน
           </app-input-error>
         </app-input-group>
 
-        <button class="btn btn-primary btn-lg" type="submit" [disabled]="loginForm.disabled">Login</button>
+        <button class="btn btn-primary btn-lg" type="submit" [disabled]="loginForm.disabled">เข้าสู่ระบบ</button>
       </form>
     </div>
   </div>
