--- a/frontend-webapp/src/app/register/register.component.html
+++ b/frontend-webapp/src/app/register/register.component.html
@@ -14,6 +14,9 @@
           <app-input-error *ngIf="registerForm.controls['email'].hasError('email')">
             กรุณากรอกอีเมลที่ถูกต้อง
           </app-input-error>
+          <app-input-error *ngIf="registerForm.controls['email'].hasError('emailDuplicate')">
+            อีเมลดังกล่าวเคยถูกใช้ไปแล้ว กรุณาใช้อีเมลอื่น
+          </app-input-error>
         </app-input-group>
 
         <app-input-group label="ชื่อจริง">
