Add feed initial wireframe

--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -1,15 +1,54 @@
-<div class="container mt-5">
-  <h1 class="display-3">Whalemart</h1>
-  <p class="lead">The biggest marketplace for market.</p>
-  <p>
-      Lorem ipsum dolor sit amet, posse fabulas assentior vix ex. Ex erat sale mei, suas quot lobortis te sed, his ad decore atomorum quaerendum. Mea an errem nobis accusata, an malis oblique scripserit his, in suavitate iracundia duo. Ei quodsi voluptaria quo. Eu errem dissentias mei.
+<!-- TODO: Implement carousel -->
+<div class="main-carousel mt-3 mb-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-10">
+        <div class="center-cell"></div>
+      </div>
+    </div>
+  </div>
+</div>
 
-      Aliquam maiorum ad his, agam impedit eu per. Case tamquam delicatissimi ei his, in primis repudiandae mei, mei sonet aperiri nusquam et. Sit et nibh nihil liberavisse, sed detracto deterruisset te. Dico alterum an pri, ignota deseruisse referrentur nam ei.
+<div class="container mb-1">
+  <div class="section-title">
+    <h2>Vivid Night Market</h2>
+    <a routerLink="/">ดูทั้งหมด ></a>
+  </div>
+</div>
 
-      Quo laudem epicuri incorrupte eu, iusto primis est et. Ex nec minim urbanitas incorrupte. Usu nostrud numquam et, in vis debitis accusata intellegam. Mel ad mazim tibique, vix ubique expetendis ullamcorper an. Libris constituto vis eu. Et pro regione recteque vulputate, et mel falli liber, id nam ipsum laudem splendide.
+<!-- TODO: Properly implement carousel -->
+<div class="container mb-5">
+  <div class="row">
+    <div class="col-3" *ngFor="let i of carouselLooper">
+      <div class="carousel-item">
+        <div class="img-container"></div>
+        <p class="location">ถนนรัชดาภิเศก กทม.</p>
+        <p class="name">ตลาดนัดถนนรัชาดาภิเสก</p>
+        <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
+        <p class="price">เริ่มต้น 1,200฿</p>
+      </div>
+    </div>
+  </div>
+</div>
 
-      Dolorem lobortis inciderint id eum, sea mutat nemore ut. Est integre euismod recusabo ex, cu partem efficiendi pro. Odio velit interpretaris mei at, usu eius disputando in, ea sed feugiat copiosae intellegam. Mei populo integre splendide ea, has ea idque disputationi. Ius et audiam albucius mediocritatem, ei vix phaedrum pertinacia.
+<div class="container mb-1">
+  <div class="section-title">
+    <h2>Sunlight Market</h2>
+    <a routerLink="/">ดูทั้งหมด ></a>
+  </div>
+</div>
 
-      Molestiae definiebas id sed, invidunt lobortis laboramus qui et. In sit ullum soluta, autem modus iudicabit at pri, sit iudico voluptua scribentur ut. Per nulla laudem ridens eu, tamquam minimum ponderum mea ea, ex ius velit delenit ullamcorper. Eu audire eleifend vel. Eu congue impetus singulis mel, ne has velit augue soluta, pri ad facete regione definiebas.
-  </p>
+<!-- TODO: Properly implement carousel -->
+<div class="container mb-5">
+  <div class="row">
+    <div class="col-3" *ngFor="let i of carouselLooper">
+      <div class="carousel-item">
+        <div class="img-container"></div>
+        <p class="location">ถนนรัชดาภิเศก กทม.</p>
+        <p class="name">ตลาดนัดถนนรัชาดาภิเสก</p>
+        <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
+        <p class="price">เริ่มต้น 1,200฿</p>
+      </div>
+    </div>
+  </div>
 </div>
