--- a/frontend-webapp/src/styles/_common.scss
+++ b/frontend-webapp/src/styles/_common.scss
@@ -7,7 +7,7 @@ $other-2: #43BCCD;
 
 $dark: #220C10;
 $dark-gray: #514547;
-$grey: #9D9395;
+$gray: #9D9395;
 $light-gray: #E1DCDD;
 
 @import '~bootstrap/scss/functions';
