Add market landing page wireframe

--- a/frontend-webapp/src/styles/_common.scss
+++ b/frontend-webapp/src/styles/_common.scss
@@ -10,6 +10,10 @@ $dark-gray: #514547;
 $gray: #9D9395;
 $light-gray: #E1DCDD;
 
+$border-radius: .125rem;
+$border-radius-lg: .15rem;
+$border-radius: .1rem;
+
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
