--- a/frontend-webapp/src/app/core/alert/alert.component.html
+++ b/frontend-webapp/src/app/core/alert/alert.component.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-12 col-md-8 col-lg-6">
-        <div *ngFor="let al of (alerts | async)" @alertInOut class="alert alert-{{al.type}} d-flex justify-content-between align-content-center">
-          <p>{{al.message}}</p>
+        <div *ngFor="let al of alerts | async" @alertInOut class="alert alert-{{ al.type }} d-flex justify-content-between align-content-center">
+          <p>{{ al.message }}</p>
           <button type="button" class="close" aria-label="Close" (click)="closeAlert()">
             <span aria-hidden="true">&times;</span>
           </button>
