Update login button appearance

--- a/frontend-webapp/src/app/login/login.component.html
+++ b/frontend-webapp/src/app/login/login.component.html
@@ -4,8 +4,6 @@
       <h1 class="display-4 mt-5">เข้าสู่ระบบ</h1>
 
       <form (submit)="login()" [formGroup]="loginForm">
-        <button (click)="loginWithFacebook()">Login with Facebook</button>
-
         <div *ngIf="isFb">
           <p>Access Token {{ fbAccessToken }}</p>
         </div>
@@ -25,6 +23,7 @@
         </app-input-group>
 
         <button class="btn btn-primary btn-lg" type="submit" [disabled]="loginForm.disabled">เข้าสู่ระบบ</button>
+        <button class="btn btn-facebook btn-lg" type="button" (click)="loginWithFacebook()">Login with Facebook</button>
       </form>
     </div>
   </div>
