Add fonts and normalize them

--- a/frontend-webapp/src/styles/global.scss
+++ b/frontend-webapp/src/styles/global.scss
@@ -1,4 +1,6 @@
 @import './common';
+@import './font';
+@import './helper';
 
 // Modified from '~bootstrap/scss/bootstrap'.
 // Import what we only want from Bootstrap.
