--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -5,12 +5,12 @@
     <form [formGroup]="searchForm" class="row align-items-end">
       <div class="col-12 col-lg-5">
         <app-input-group label="ชื่อตลาดหรือสถานที่">
-          <input appInput type="text" class="form-control btn-lg" placeholder="ชื่อตลาดหรือสถานที่">
+          <input appInput type="text" class="form-control form-control-lg" placeholder="ชื่อตลาดหรือสถานที่">
         </app-input-group>
       </div>
       <div class="col-12 col-lg-4">
         <app-input-group label="ช่วงวันจัดตลาด">
-          <input appInput type="text" class="form-control btn-lg" placeholder="ตั้งแต่วันที่ &ndash; ถึงวันที่">
+          <input appInput type="text" class="form-control form-control-lg" placeholder="ตั้งแต่วันที่ &ndash; ถึงวันที่">
         </app-input-group>
       </div>
       <div class="col-12 col-lg-3 mb-3 mt-2">
@@ -35,7 +35,7 @@
           <div class="img-container"></div>
           <div class="card">
             <div class="card-body">
-              <h4 class="name">ตลาดนัดถนนรัชาดาภิเษก</h4>
+              <h4 class="name">ตลาดนัดถนนรัชดาภิเษก</h4>
               <p class="location">ถนนรัชดาภิเษก กทม.</p>
               <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
               <div class="d-flex justify-content-between align-items-center mt-3">
@@ -68,7 +68,7 @@
               <div class="expire-note">หมดเขตจองในอีก 3 วัน</div>
             </div>
             <p class="location">ถนนรัชดาภิเศก กทม.</p>
-            <p class="name">ตลาดนัดถนนรัชาดาภิเสก</p>
+            <p class="name">ตลาดนัดถนนรัชดาภิเษก</p>
             <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
             <p class="price">เริ่มต้น 1,200฿</p>
           </div>
@@ -90,8 +90,8 @@
         <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let i of carouselLooper">
           <div class="carousel-item">
             <div class="img-container"></div>
-            <p class="location">ถนนรัชดาภิเศก กทม.</p>
-            <p class="name">ตลาดนัดถนนรัชาดาภิเสก</p>
+            <p class="location">ถนนรัชดาภิเษก กทม.</p>
+            <p class="name">ตลาดนัดถนนรัชดาภิเษก</p>
             <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
             <p class="price">เริ่มต้น 1,200฿</p>
           </div>
