--- a/frontend-webapp/src/app/shared/input/input-group.component.scss
+++ b/frontend-webapp/src/app/shared/input/input-group.component.scss
@@ -2,7 +2,7 @@
 @import '~styles/helper';
 
 label {
-  @extend ._font-heading;
+  font-family: $headings-font-family;
   @extend ._font-regular;
   color: $dark-gray;
 }
