--- a/frontend-webapp/src/styles/_common.scss
+++ b/frontend-webapp/src/styles/_common.scss
@@ -17,6 +17,8 @@ $border-radius: .125rem;
 $border-radius-lg: .15rem;
 $border-radius: .1rem;
 
+$headings-font-family: 'Lato', 'Mitr', sans-serif !important;
+
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins';
