--- a/frontend-webapp/src/styles/global.scss
+++ b/frontend-webapp/src/styles/global.scss
@@ -42,13 +42,13 @@
 @import '~bootstrap/scss/utilities';
 
 html {
-  @extend ._font-body;
+  font-family: $font-family-sans-serif;
   @extend ._font-regular;
   font-size: 15px;
 }
 
 h1, h2, h3 {
-  @extend ._font-heading;
+  font-family: $headings-font-family;
   @extend ._font-bold;
 }
 
@@ -63,6 +63,6 @@ h1, h2, h3 {
 }
 
 .btn {
-  @extend ._font-heading;
+  font-family: $headings-font-family;
   @extend ._font-regular;
 }
