Change btn-lg to form-control-lg for input tags

--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -5,12 +5,12 @@
     <form [formGroup]="searchForm" class="row align-items-end">
       <div class="col-12 col-lg-5">
         <app-input-group label="ชื่อตลาดหรือสถานที่">
-          <input appInput type="text" class="form-control btn-lg" placeholder="ชื่อตลาดหรือสถานที่">
+          <input appInput type="text" class="form-control form-control-lg" placeholder="ชื่อตลาดหรือสถานที่">
         </app-input-group>
       </div>
       <div class="col-12 col-lg-4">
         <app-input-group label="ช่วงวันจัดตลาด">
-          <input appInput type="text" class="form-control btn-lg" placeholder="ตั้งแต่วันที่ &ndash; ถึงวันที่">
+          <input appInput type="text" class="form-control form-control-lg" placeholder="ตั้งแต่วันที่ &ndash; ถึงวันที่">
         </app-input-group>
       </div>
       <div class="col-12 col-lg-3 mb-3 mt-2">
