--- a/frontend-webapp/src/styles/global.scss
+++ b/frontend-webapp/src/styles/global.scss
@@ -40,6 +40,11 @@
 // @import '~bootstrap/scss/carousel';
 @import '~bootstrap/scss/utilities';
 
+.form-control-lg {
+  padding: 0.8rem 1.4rem;
+  font-size: 1rem;
+}
+
 .btn-lg {
   font-size: 1rem;
 }
