--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -1,1 +1,49 @@
-<div>test</div>
+<div class="container mb-5">
+  <div class="row justify-content-center">
+    <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
+      <h1 class="display-4 mt-5">กลายมาเป็นผู้ให้เช่า</h1>
+
+      <form [formGroup]="registerForm" (submit)="register()">
+        <app-input-group label="อีเมล">
+          <input appInput type="email" class="form-control" formControlName="email" placeholder="อีเมล">
+          <app-input-error *ngIf="">
+            กรุณากรอกอีเมลที่ถูกต้อง
+          </app-input-error>
+          <app-input-error *ngIf="">
+            อีเมลดังกล่าวเคยถูกใช้ไปแล้ว กรุณาใช้อีเมลอื่น
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="ชื่อจริง">
+          <input appInput type="text" class="form-control" formControlName="firstName" placeholder="ชื่อจริง">
+          <app-input-error *ngIf="">
+            กรุณากรอกชื่อจริง
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="นามสกุล">
+          <input appInput type="text" class="form-control" formControlName="lastName" placeholder="นามสกุล">
+          <app-input-error *ngIf="">
+            กรุณากรอกนามสกุล
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="รหัสผ่าน">
+          <input appInput type="password" class="form-control" formControlName="password" placeholder="รหัสผ่าน">
+          <app-input-error *ngIf="">
+            กรุณากรอกรหัสผ่าน
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="เบอร์โทรศัพท์">
+          <input appInput type="text" class="form-control" formControlName="phone" placeholder="เบอร์โทรศัพท์">
+          <app-input-error *ngIf="">
+            กรุณากรอกเบอร์โทรศัพท์
+          </app-input-error>
+        </app-input-group>
+
+        <button type="submit" class="btn btn-primary btn-lg">สมัครสมาชิก</button>
+      </form>
+    </div>
+  </div>
+</div>
