Complete form of lessor register

--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -10,10 +10,7 @@
     <div class="collapse navbar-collapse" [class.show]="isMenuOpened" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">ลงตลาดให้เช่า</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/become-lessor">กลายมาเป็นผู้ให้เช่าตลาด</a>
+          <a class="nav-link" routerLink="become-lessor">ลงตลาดให้เช่า</a>
         </li>
         <ng-container *ngIf="(userName | async) as name; else loggedIn">
           <span class="navbar-text">{{ name }}</span>
