--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -1,17 +1,11 @@
 <div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
-      <h1 class="display-4 mt-5">กลายมาเป็นผู้ให้เช่า</h1>
-
-      <form [formGroup]="">
-        <app-input-group label="ชื่อผู้ให้เช่า">
-          <input type="text" class="form-control" formControlName="lessorName" placeholder="ตลาดปากน้ำ">
-        </app-input-group>
-      </form>
+      <h1 class="display-4 mt-5">ลงตลาดให้เช่า</h1>
       
-      <!-- <form>
-        <app-input-group label="อีเมล">
-          <input appInput type="email" class="form-control" formControlName="email" placeholder="อีเมล">
+      <form [formGroup]="becomeLessorForm" (submit)="becomeLessor()">
+        <app-input-group label="ชื่อผู้ให้เช่า">
+          <input appInput type="text" class="form-control" formControlName="lessorName" placeholder="ชื่อผู้ให้เช่า">
           <app-input-error *ngIf="">
             กรุณากรอกอีเมลที่ถูกต้อง
           </app-input-error>
@@ -20,7 +14,33 @@
           </app-input-error>
         </app-input-group>
 
-        <app-input-group label="ชื่อจริง">
+        <app-input-group label="เป็นองค์กรหรือไม่">
+          <div appInput class="form-check">
+            <label class="form-check-label">
+              <input appInput type="checkbox" class="form-check-input" fornControlName="isOrganization"> เป็นองค์กร
+            </label>
+          </div>
+          <app-input-error>
+            กรุณาเลือกเป็นองค์กรหรือไม่
+          </app-input-error>
+        </app-input-group>
+
+        <app-input-group label="ชื่อองค์กร">
+          <input appInput type="text" class="form-control" formControlName="organizationName" placeholder="ชื่อองค์กร">
+        </app-input-group>
+
+        <app-input-group label="ชื่อติดต่อในองค์กร">
+          <input appInput type="text" class="form-control" formControlName="organizationContactName" placeholder="ชื่อติดต่อในองค์กร">
+        </app-input-group>
+
+        <app-input-group label="อีเมล์องค์กร">
+          <input appInput type="email" class="form-control" formControlName="organizationEmail" placeholder="อีเมล์องค์กร">
+        </app-input-group>          
+
+        <app-input-group label="เบอร์โทรศัพท์องค์กร">
+          <input appInput type="text" class="form-control" formControlName="organizationPhone" placeholder="เบอร์โทรศัพท์องค์กร">
+        </app-input-group>
+        <!-- <app-input-group label="ชื่อจริง">
           <input appInput type="text" class="form-control" formControlName="firstName" placeholder="ชื่อจริง">
           <app-input-error *ngIf="">
             กรุณากรอกชื่อจริง
@@ -46,10 +66,10 @@
           <app-input-error *ngIf="">
             กรุณากรอกเบอร์โทรศัพท์
           </app-input-error>
-        </app-input-group>
+        </app-input-group> -->
 
-        <button type="submit" class="btn btn-primary btn-lg">สมัครสมาชิก</button>
-      </form> -->
+        <button type="submit" class="btn btn-primary btn-lg">ลงตลาด</button>
+      </form>
     </div>
   </div>
 </div>
