--- a/frontend-webapp/src/app/become-lessor/become-lessor.component.html
+++ b/frontend-webapp/src/app/become-lessor/become-lessor.component.html
@@ -1,7 +1,7 @@
 <div class="container mb-5">
   <div class="row justify-content-center">
     <div class="col-12 col-sm-9 col-md-6 col-lg-5 col-xl-5">
-      <h1 class="display-4 mt-5">ลงตลาดให้เช่า</h1>
+      <h1 class="display-4 mt-5">สมัครเป็นผู้ให้เช่าตลาด</h1>
       
       <form [formGroup]="becomeLessorForm" (submit)="becomeLessor()">
         <app-input-group label="ชื่อผู้ให้เช่า">
@@ -17,7 +17,12 @@
         <app-input-group label="เป็นองค์กรหรือไม่">
           <div appInput class="form-check">
             <label class="form-check-label">
-              <input appInput type="checkbox" class="form-check-input" fornControlName="isOrganization"> เป็นองค์กร
+              <input appInput 
+                type="checkbox" 
+                [checked]="isOrganization" 
+                (change)="toggleIsOrganization()" 
+                class="form-check-input"
+                fornControlName="isOrganization"> เป็นองค์กร
             </label>
           </div>
           <app-input-error>
@@ -26,47 +31,20 @@
         </app-input-group>
 
         <app-input-group label="ชื่อองค์กร">
-          <input appInput type="text" class="form-control" formControlName="organizationName" placeholder="ชื่อองค์กร">
+          <input appInput type="text" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationName" placeholder="ชื่อองค์กร">
         </app-input-group>
 
         <app-input-group label="ชื่อติดต่อในองค์กร">
-          <input appInput type="text" class="form-control" formControlName="organizationContactName" placeholder="ชื่อติดต่อในองค์กร">
+          <input appInput type="text" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationContactName" placeholder="ชื่อติดต่อในองค์กร">
         </app-input-group>
 
         <app-input-group label="อีเมล์องค์กร">
-          <input appInput type="email" class="form-control" formControlName="organizationEmail" placeholder="อีเมล์องค์กร">
+          <input appInput type="email" class="form-control" [attr.disabled]="isOrganization ? null : ''" formControlName="organizationEmail" placeholder="อีเมล์องค์กร">
         </app-input-group>          
 
         <app-input-group label="เบอร์โทรศัพท์องค์กร">
-          <input appInput type="text" class="form-control" formControlName="organizationPhone" placeholder="เบอร์โทรศัพท์องค์กร">
+          <input appInput type="text" class="form-control" [attr.disabled]="isOrganization ? nulll : ''" formControlName="organizationPhone" placeholder="เบอร์โทรศัพท์องค์กร">
         </app-input-group>
-        <!-- <app-input-group label="ชื่อจริง">
-          <input appInput type="text" class="form-control" formControlName="firstName" placeholder="ชื่อจริง">
-          <app-input-error *ngIf="">
-            กรุณากรอกชื่อจริง
-          </app-input-error>
-        </app-input-group>
-
-        <app-input-group label="นามสกุล">
-          <input appInput type="text" class="form-control" formControlName="lastName" placeholder="นามสกุล">
-          <app-input-error *ngIf="">
-            กรุณากรอกนามสกุล
-          </app-input-error>
-        </app-input-group>
-
-        <app-input-group label="รหัสผ่าน">
-          <input appInput type="password" class="form-control" formControlName="password" placeholder="รหัสผ่าน">
-          <app-input-error *ngIf="">
-            กรุณากรอกรหัสผ่าน
-          </app-input-error>
-        </app-input-group>
-
-        <app-input-group label="เบอร์โทรศัพท์">
-          <input appInput type="text" class="form-control" formControlName="phone" placeholder="เบอร์โทรศัพท์">
-          <app-input-error *ngIf="">
-            กรุณากรอกเบอร์โทรศัพท์
-          </app-input-error>
-        </app-input-group> -->
 
         <button type="submit" class="btn btn-primary btn-lg">ลงตลาด</button>
       </form>
