--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
   <div class="container justify-content-between">
     <!-- TODO: Replace with actual logo. -->
-    <a class="navbar-brand" routerLink="/">Whalemart</a>
+    <a class="navbar-brand" routerLink="/">
+      <app-svg-icon key="whalemart-logo-with-name" width="160"></app-svg-icon>
+    </a>
 
     <button class="navbar-toggler" type="button" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" [attr.aria-expanded]="isMenuOpened" aria-label="Toggle navigation" (click)="isMenuOpened = !isMenuOpened">
       <span class="navbar-toggler-icon"></span>
