--- a/frontend-webapp/src/app/feed/feed.component.html
+++ b/frontend-webapp/src/app/feed/feed.component.html
@@ -36,15 +36,22 @@
           <div class="card">
             <div class="card-body">
               <h4 class="name">ตลาดนัดถนนรัชดาภิเษก</h4>
-              <p class="location">ถนนรัชดาภิเษก กทม.</p>
-              <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
+              <p class="location">
+                <app-svg-icon key="location-pin" width="15"></app-svg-icon>
+                <span>ถนนรัชดาภิเษก กทม.</span>
+              </p>
+              <p class="date">
+                <app-svg-icon key="date" width="18"></app-svg-icon>
+                <span>18&ndash;24 ธันวาคม 2560</span>
+              </p>
               <div class="d-flex justify-content-between align-items-center mt-3">
                 <p class="price">เริ่มต้น 1,200฿</p>
                 <a routerLink="/" class="btn btn-primary">ดูเพิ่มเติม</a>
               </div>
             </div>
             <div class="card-footer">
-              มีคนจองตลาดนี้แล้ว 84 คน
+                <app-svg-icon key="person-circle"></app-svg-icon>
+                <span>มีคนจองตลาดนี้แล้ว 84 คน</span>
             </div>
           </div>
         </div>
@@ -56,7 +63,12 @@
     <div class="container mb-3">
       <div class="section-title">
         <h2>ตลาดนัดชิวยามค่ำคืน</h2>
-        <a routerLink="/">ดูทั้งหมด ></a>
+        <a class="link-with-icon" routerLink="/">
+          <div class="link-text">ดูทั้งหมด</div>
+          <div class="link-icon">
+            <app-svg-icon key="arrow-head-right" width="8"></app-svg-icon>
+          </div>
+        </a>
       </div>
     </div>
 
@@ -67,7 +79,9 @@
             <div class="img-container">
               <div class="expire-note">หมดเขตจองในอีก 3 วัน</div>
             </div>
-            <p class="location">ถนนรัชดาภิเศก กทม.</p>
+            <p class="location">
+              <app-svg-icon key="location-pin"></app-svg-icon> ถนนรัชดาภิเศก กทม.
+            </p>
             <p class="name">ตลาดนัดถนนรัชดาภิเษก</p>
             <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
             <p class="price">เริ่มต้น 1,200฿</p>
@@ -81,7 +95,12 @@
     <div class="container mb-3">
       <div class="section-title">
         <h2>ตลาดนัดใต้แสงแดดประเทศไทย</h2>
-        <a routerLink="/">ดูทั้งหมด ></a>
+        <a class="link-with-icon" routerLink="/">
+          <div class="link-text">ดูทั้งหมด</div>
+          <div class="link-icon">
+            <app-svg-icon key="arrow-head-right" width="8"></app-svg-icon>
+          </div>
+        </a>
       </div>
     </div>
 
@@ -90,7 +109,7 @@
         <div class="col-12 col-sm-6 col-lg-3 mb-5" *ngFor="let i of carouselLooper">
           <div class="carousel-item">
             <div class="img-container"></div>
-            <p class="location">ถนนรัชดาภิเษก กทม.</p>
+            <p class="location"><app-svg-icon key="location-pin"></app-svg-icon> ถนนรัชดาภิเษก กทม.</p>
             <p class="name">ตลาดนัดถนนรัชดาภิเษก</p>
             <p class="date">วันที่ 18&ndash;24 ธันวาคม 2560</p>
             <p class="price">เริ่มต้น 1,200฿</p>
