Implement sub nav bar attachment system

--- a/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
+++ b/frontend-webapp/src/app/core/nav-bar/nav-bar.component.html
@@ -28,5 +28,9 @@
         </ng-template>
       </ul>
     </div>
+
+    <div>
+      <ng-container [cdkPortalOutlet]="getSubNavBarPortal() | async"></ng-container>
+    </div>
   </div>
 </nav>
